--- a/attach-corp/src/test/resources/application.yml
+++ b/attach-corp/src/test/resources/application.yml
@@ -11,17 +11,29 @@ logging:
     cc.coopersoft: DEBUG
 
 
-eureka:
-  instance:
-    preferIpAddress: true
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://192.168.1.21:8761/eureka/
+
+#spring:
+#  cloud:
+#    stream:
+#      bindings:
+#        certificateExecute:
+#          destination: certificateChangeTopic
+#          content-type: application/json
+#      kafka:
+#        binder:
+#          brokers: 192.168.1.21
 
 signing:
   key: "345345fsdfsf5345"
+
+ugly:
+  register:
+    service:
+      url: http://192.168.1.21:9901/api/
+
+business:
+  readyLimitDay: 10
+
 
 
 uid:
@@ -62,7 +74,3 @@ spring:
         naming:
           physical-strategy: "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl"
 
-ugly:
-  register:
-    service:
-      url: http://127.0.0.1:9901/api/
