--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.1.RELEASE</version>
+        <version>2.1.13.RELEASE</version>
     </parent>
 
     <dependencyManagement>
@@ -26,7 +26,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Greenwich.RELEASE</version>
+                <version>Greenwich.SR5</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -38,12 +38,12 @@
         <dependency>
             <groupId>cc.coopersoft</groupId>
             <artifactId>common-cloud</artifactId>
-            <version>0.2.18</version>
+            <version>1.0.2</version>
         </dependency>
         <dependency>
             <groupId>cc.coopersoft</groupId>
             <artifactId>common-construct</artifactId>
-            <version>1.3.37</version>
+            <version>1.3.40</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
