--- a/project-construct/src/test/resources/bootstrap.yml
+++ b/project-construct/src/test/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: construct-project
   profiles:
     active:
-      default
+      test
   cloud:
     config:
       enabled: false
