--- a/attach-corp/src/main/resources/application-test.yml
+++ b/attach-corp/src/main/resources/application-test.yml
@@ -11,21 +11,17 @@ logging:
     cc.coopersoft: DEBUG
 
 
-
-#spring:
-#  cloud:
-#    stream:
-#      bindings:
-#        certificateExecute:
-#          destination: certificateChangeTopic
-#          content-type: application/json
-#      kafka:
-#        binder:
-#          brokers: 192.168.1.21
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://192.168.1.21:8761/eureka/
 
 signing:
   key: "345345fsdfsf5345"
-
 
 
 uid:
@@ -65,4 +61,3 @@ spring:
         dialect: "org.hibernate.dialect.MySQL5Dialect"
         naming:
           physical-strategy: "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl"
-
