--- a/attach-corp/src/main/resources/bootstrap.yml
+++ b/attach-corp/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: construct-attach-corp
   profiles:
     active:
-      dev
+      test
   cloud:
     config:
       uri: http://192.168.1.21:8888
