--- a/docker/dev/data/rocketmq/broker.conf
+++ b/docker/dev/data/rocketmq/broker.conf
@@ -94,3 +94,5 @@ flushDiskType=ASYNC_FLUSH
 # sendMessageThreadPoolNums=128
 # 拉消息线程池数量
 # pullMessageThreadPoolNums=128
+
+brokerIP1=10.10.101.80 #change you own physical IP Address
