--- a/attach-corp/src/main/resources/application-test.yml
+++ b/attach-corp/src/main/resources/application-test.yml
@@ -36,9 +36,17 @@ uid:
     paddingFactor: 50      # 指定何时向RingBuffer中填充UID, 取值为百分比(0, 100), 默认为50
     #scheduleInterval: 60    # 默认:不配置此项, 即不实用Schedule线程. 如需使用, 请指定Schedule线程时间间隔, 单位:秒
 
-
-
 spring:
+  cloud:
+    stream:
+      rocketmq:
+        binder:
+          name-server:
+            192.168.1.21:9876
+      bindings:
+        output:
+          destination: corpChangeTopic
+          content-type: application/json
   datasource:
     testWhileIdle: "true"
     validationQuery: "SELECT 1"
