--- a/attach-corp/src/main/resources/bootstrap.yml
+++ b/attach-corp/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     config:
       uri: http://192.168.1.21:8888
-      enabled: true
+      enabled: false
 
 server:
   port: 19001
