--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -192,7 +192,31 @@ services:
       - configserver
       - rmqnamesrv
 
-
+  projectservices:
+    image: coopersoft/construct-project-service:snapshot
+    expose:
+      - "19002"
+    environment:
+      PROFILE: "dev"
+      SERVER_PORT: "19002"
+      CONFIGSERVER_PORT: 8888
+      EUREKASERVER_PORT: 8761
+      AUTHSERVER_PORT:   8091
+      CONFIGSERVER_URI: "http://configserver:8888"
+      EUREKASERVER_URI: "http://eurekaserver:8761/eureka/"
+      AUTHSERVER_URI:   "http://authenticationservice/auth/user"
+      ENCRYPT_KEY:       "IMSYMMETRIC"
+      TZ: Asia/Shanghai
+    links:
+      - eurekaserver:eurekaserver
+      - database:database
+      - configserver:configserver
+      - rmqnamesrv:rmqnamesrv
+    depends_on:
+      - eurekaserver
+      - database
+      - configserver
+      - rmqnamesrv
 
   cacheservices:
     image: coopersoft/construct-project-cache-service:snapshot
