--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.13.RELEASE</version>
+        <version>2.1.12.RELEASE</version>
     </parent>
 
     <dependencyManagement>
@@ -55,8 +55,8 @@
 
         <dependency>
             <groupId>cc.coopersoft</groupId>
-            <artifactId>common-cloud</artifactId>
-            <version>1.0.7</version>
+            <artifactId>common-cloud-spring-boot-starter</artifactId>
+            <version>1.0.13</version>
         </dependency>
         <dependency>
             <groupId>cc.coopersoft</groupId>
