--- a/attach-corp/src/test/resources/application-test.yml
+++ b/attach-corp/src/test/resources/application-test.yml
@@ -1,33 +1,27 @@
-security:
-  oauth2:
-    resource:
-      userInfoUri: http://192.168.1.21:8901/auth/user
+
 
 #Setting the logging levels for the service
 logging:
   level:
     com.netflix: WARN
-    org.springframework.web: WARN
     cc.coopersoft: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
+    org.springframework.boot.autoconfigure: DEBUG
+
 
 spring:
+  cloud:
+    consul:
+      discovery:
+        enabled: false
   datasource:
-    testWhileIdle: "true"
-    validationQuery: "SELECT 1"
     url: "jdbc:mysql://127.0.0.1:3306/CONSTRUCT?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false"
     username: "root"
     password: "5257mq99"
-    driver-class-name: "com.mysql.cj.jdbc.Driver"
     platform: mysql
     initialization-mode: always
   jpa:
-    database: "MYSQL"
     show-sql: "true"
-    hibernate:
-      naming:
-        physical-strategy: "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl"
-    properties:
-      hibernate:
-        ddl-auto: "none"
-        enable_lazy_load_no_trans: true
-        dialect: "org.hibernate.dialect.MySQL5Dialect"
+
+
