--- a/attach-corp/src/test/resources/bootstrap.yml
+++ b/attach-corp/src/test/resources/bootstrap.yml
@@ -5,8 +5,10 @@ spring:
     active:
       test
   cloud:
-    config:
-      enabled: false
+    consul:
+      config:
+        enabled: false
+
 
 server:
   port: 19001
