--- a/project-construct/pom.xml
+++ b/project-construct/pom.xml
@@ -22,9 +22,43 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>cc.coopersoft.construct.project.Application</start-class>
         <docker.image.name>coopersoft/construct-project-service</docker.image.name>
-        <docker.image.tag>latest</docker.image.tag>
+        <docker.image.tag>snapshot</docker.image.tag>
 <!--        <docker.image.tag>snapshot</docker.image.tag>-->
     </properties>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.wujun234</groupId>
+            <artifactId>uid-generator-spring-boot-starter</artifactId>
+            <version>1.0.2.RELEASE</version>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
