--- a/project-construct/src/main/resources/application.yml
+++ b/project-construct/src/main/resources/application.yml
@@ -1,7 +1,3 @@
-security:
-  oauth2:
-    resource:
-      userInfoUri: http://192.168.1.21:8901/auth/user
 
 #Setting the logging levels for the service
 logging:
@@ -11,26 +7,82 @@ logging:
     cc.coopersoft: DEBUG
 
 
-eureka:
-  instance:
-    preferIpAddress: true
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://192.168.1.21:8761/eureka/
 
 spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          master-extend-cer:
+            provider: keycloak
+            client-id: extends
+            client-secret: f0efd4d7-3c26-430c-968f-d8987518a5b8
+            authorization-grant-type: client_credentials
+            scope: Master
+        provider:
+          keycloak:
+            authorization-uri: http://keycloak:8080/auth/realms/construction/protocol/openid-connect/auth
+            token-uri: http://keycloak:8080/auth/realms/construction/protocol/openid-connect/token
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://keycloak:8080/auth/realms/construction/protocol/openid-connect/certs
   cloud:
+    consul:
+      discovery:
+        serviceName: ${spring.application.name}
+        # 启用服务发现
+        enabled: true
+        # 启用服务注册
+        register: true
+        # 服务停止时取消注册
+        deregister: true
+        # 表示注册时使用IP而不是hostname
+        prefer-ip-address: true
+        # 执行监控检查的频率
+        health-check-interval: 30s
+        # 设置健康检查失败多长时间后，取消注册
+        health-check-critical-timeout: 30s
+        # 健康检查的路径
+        health-check-path: /actuator/info
+        # 服务注册标识，格式为：应用名称+服务器IP+端口
+        instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
     stream:
       rocketmq:
         binder:
           name-server:
-            192.168.1.21:9876
+            rmqnamesrv:9876
       bindings:
         output:
           destination: projectChangeTopic
           content-type: application/json
+  datasource:
+    initialization-mode: NEVER
+    testWhileIdle: "true"
+    validationQuery: "SELECT 1"
+    url: "jdbc:mysql://database:3306/CONSTRUCT?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false"
+    username: "root"
+    password: "p0stgr@s"
+    driver-class-name: "com.mysql.cj.jdbc.Driver"
+  jpa:
+    database: "MYSQL"
+    show-sql: "false"
+    hibernate:
+      naming:
+        physical-strategy: "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl"
+    properties:
+      hibernate:
+        ddl-auto: "none"
+        enable_lazy_load_no_trans: true
+        dialect: "org.hibernate.dialect.MySQL5Dialect"
 
-signing:
-  key: "345345fsdfsf5345"
+uid:
+  timeBits: 30             # 时间位, 默认:30
+  workerBits: 17           # 机器位, 默认:16
+  seqBits: 6               # 序列号, 默认:7
+  epochStr: "2019-09-01"   # 初始时间, 默认:"2019-02-20"
+  enableBackward: true    # 是否容忍时钟回拨, 默认:true
+  maxBackwardSeconds: 1    # 时钟回拨最长容忍时间（秒）, 默认:1
+  CachedUidGenerator:     # CachedUidGenerator相关参数
+    boostPower: 3          # RingBuffer size扩容参数, 可提高UID生成的吞吐量, 默认:3
+    paddingFactor: 50      # 指定何时向RingBuffer中填充UID, 取值为百分比(0, 100), 默认为50
+    #scheduleInterval: 60    # 默认:不配置此项, 即不实用Schedule线程. 如需使用, 请指定Schedule线程时间间隔, 单位:秒
