--- a/attach-corp/pom.xml
+++ b/attach-corp/pom.xml
@@ -23,7 +23,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>cc.coopersoft.construct.corp.Application</start-class>
         <docker.image.name>coopersoft/construct-attach-corp-service</docker.image.name>
-        <docker.image.tag>snapshot</docker.image.tag>
+        <docker.image.tag>1.0.1</docker.image.tag>
 
 <!--        <docker.image.tag>snapshot</docker.image.tag>-->
     </properties>
