--- a/project-construct/pom.xml
+++ b/project-construct/pom.xml
@@ -22,7 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>cc.coopersoft.construct.project.Application</start-class>
         <docker.image.name>coopersoft/construct-project-service</docker.image.name>
-        <docker.image.tag>snapshot</docker.image.tag>
+        <docker.image.tag>1.0.1</docker.image.tag>
 <!--        <docker.image.tag>snapshot</docker.image.tag>-->
     </properties>
 
