--- a/trust-gateway/pom.xml
+++ b/trust-gateway/pom.xml
@@ -13,7 +13,7 @@
         <start-class>cc.coopersoft.trust.gateway.Application</start-class>
         <java.version>11</java.version>
         <docker.image.name>coopersoft/trust-gatewaysvr</docker.image.name>
-        <docker.image.tag>snapshot</docker.image.tag>
+        <docker.image.tag>1.0.1</docker.image.tag>
     </properties>
 
     <parent>
